============================================
NetworkManager-1.6
Overview of changes since NetworkManager-1.4
============================================

This is a new stable release of NetworkManager.  Notable changes include:

* Fix emission of NM-style PropertiesChanged signals and deprecate them
    for PropertiesChanged on "org.freedesktop.DBus.Properties" interface.

============================================
NetworkManager-1.4
Overview of changes since NetworkManager-1.2
============================================

This is a new stable release of NetworkManager.  Notable changes include:

* The MAC address assigned to a device can now be set according to
    different policies: preserve, permanent, random, stable
* NetworkManager now waits for IPv6 DAD to terminate before completing
    the activation
* Added support for setting IPv6 tokenized interface identifiers
    through the 'ipv6.token' connection property
* Added a 'Reload' D-Bus method to reload configuration and reapply
    DNS configuration
* Added ability to create a configuration checkpoints and rolling back
    changes after a timeout.
* NetworkManager now follows symlinks when accessing resolv.conf and
    rc-manager is set to 'file'
* Added support for oFono as modem manager
* The devices now exposes counters of transferred data
* The 'may-fail' property of ipv4 and ipv6 settings is now respected
    more accurately
* The timeout for requests of secrets to agents has been increased
    from 25 to 120 seconds
* Name servers passed to dnsmasq now specify an egress interface to
    avoid problems with multiple active connections
* Reverse DNS entries for IPv6 are now added to dnsmasq, and IPv4
    reverse entries now honor the network prefix
* A new 'dns-priority' property of ipv4 and ipv6 settings can be used
    to tweak the order of servers in resolv.conf when multiple
    connections are active
* configure script accepts --enable-{address,undefined}-sanitizer